Lab2/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | Specifier error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | ID LP error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | LC error RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | IF LP Exp RP error ELSE Stmt
   37     | WHILE LP Exp RP Stmt

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI
   41    | Specifier error SEMI

   42 DecList: Dec
   43        | Dec COMMA DecList
   44        | Dec error DecList
   45        | Dec error

   46 Dec: VarDec
   47    | VarDec ASSIGNOP Exp
   48    | VarDec ASSIGNOP error

   49 Exp: Exp ASSIGNOP Exp
   50    | Exp AND Exp
   51    | Exp OR Exp
   52    | Exp RELOP Exp
   53    | Exp PLUS Exp
   54    | Exp MINUS Exp
   55    | Exp STAR Exp
   56    | Exp DIV Exp
   57    | LP Exp RP
   58    | MINUS Exp
   59    | NOT Exp
   60    | ID LP Args RP
   61    | ID LP RP
   62    | Exp LB Exp RB
   63    | Exp LB error RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT

   68 Args: Exp COMMA Args
   69     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 20 23 28 36 41 44 45 48 63
    INT <node> (258) 19 66
    FLOAT <node> (259) 67
    ID <node> (260) 15 17 18 21 22 23 60 61 64 65
    SEMI <node> (261) 4 5 7 31 33 40 41
    COMMA <node> (262) 10 24 43 68
    ASSIGNOP <node> (263) 47 48 49
    RELOP <node> (264) 52
    PLUS <node> (265) 53
    MINUS <node> (266) 54 58
    STAR <node> (267) 55
    DIV <node> (268) 56
    AND <node> (269) 50
    OR <node> (270) 51
    DOT <node> (271) 64
    NOT <node> (272) 59
    TYPE <node> (273) 11
    LP <node> (274) 21 22 23 34 35 36 37 57 60 61
    RP <node> (275) 21 22 23 34 35 36 37 57 60 61
    LB <node> (276) 19 20 62 63
    RB <node> (277) 19 20 62 63
    LC <node> (278) 13 27 28
    RC <node> (279) 13 27 28
    STRUCT <node> (280) 13 14
    RETURN <node> (281) 33
    IF <node> (282) 34 35 36
    ELSE <node> (283) 35 36
    WHILE <node> (284) 37
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <node> (32)
        on left: 1
        on right: 0
    ExtDefList <node> (33)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (34)
        on left: 4 5 6 7 8
        on right: 2
    ExtDecList <node> (35)
        on left: 9 10
        on right: 4 10
    Specifier <node> (36)
        on left: 11 12
        on right: 4 5 6 7 8 26 40 41
    StructSpecifier <node> (37)
        on left: 13 14
        on right: 12
    OptTag <node> (38)
        on left: 15 16
        on right: 13
    Tag <node> (39)
        on left: 17
        on right: 14
    VarDec <node> (40)
        on left: 18 19 20
        on right: 9 10 19 20 26 46 47 48
    FunDec <node> (41)
        on left: 21 22 23
        on right: 6 7
    VarList <node> (42)
        on left: 24 25
        on right: 21 24
    ParamDec <node> (43)
        on left: 26
        on right: 24 25
    CompSt <node> (44)
        on left: 27 28
        on right: 6 32
    StmtList <node> (45)
        on left: 29 30
        on right: 27 29
    Stmt <node> (46)
        on left: 31 32 33 34 35 36 37
        on right: 29 34 35 36 37
    DefList <node> (47)
        on left: 38 39
        on right: 13 27 38
    Def <node> (48)
        on left: 40 41
        on right: 38
    DecList <node> (49)
        on left: 42 43 44 45
        on right: 40 43 44
    Dec <node> (50)
        on left: 46 47 48
        on right: 42 43 44 45
    Exp <node> (51)
        on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
        on right: 31 33 34 35 36 37 47 49 50 51 52 53 54 55 56 57 58 59 62 63 64 68 69
    Args <node> (52)
        on left: 68 69
        on right: 60 68


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 2

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    8       | Specifier . error

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 9

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    8 ExtDef: Specifier error .

    $default  reduce using rule 8 (ExtDef)


State 14

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP
   23       | ID . LP error RP

    LP  shift, and go to state 20

    $default  reduce using rule 18 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 21


State 17

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB

    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 9 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 24
    LC    shift, and go to state 25

    CompSt  go to state 26


State 19

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 28
    Def              go to state 29


State 20

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP
   23       | ID LP . error RP

    error   shift, and go to state 30
    TYPE    shift, and go to state 1
    RP      shift, and go to state 31
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 33
    ParamDec         go to state 34


State 21

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 22

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 17


State 23

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error RB

    error  shift, and go to state 37
    INT    shift, and go to state 38


State 24

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 25

   27 CompSt: LC . DefList StmtList RC
   28       | LC . error RC

    error   shift, and go to state 39
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 40
    Def              go to state 29


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   40 Def: Specifier . DecList SEMI
   41    | Specifier . error SEMI

    error  shift, and go to state 41
    ID     shift, and go to state 35

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 28

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


State 29

   38 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 46
    Def              go to state 29


State 30

   23 FunDec: ID LP error . RP

    RP  shift, and go to state 47


State 31

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 32

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  go to state 48


State 33

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


State 34

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 25 (VarList)


State 35

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 36

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 37

   20 VarDec: VarDec LB error . RB

    RB  shift, and go to state 51


State 38

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 52


State 39

   28 CompSt: LC error . RC

    RC  shift, and go to state 53


State 40

   27 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 25
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    $default  reduce using rule 30 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


State 41

   41 Def: Specifier error . SEMI

    SEMI  shift, and go to state 67


State 42

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   46 Dec: VarDec .
   47    | VarDec . ASSIGNOP Exp
   48    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 23

    $default  reduce using rule 46 (Dec)


State 43

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 69


State 44

   42 DecList: Dec .
   43        | Dec . COMMA DecList
   44        | Dec . error DecList
   45        | Dec . error

    error  shift, and go to state 70
    COMMA  shift, and go to state 71

    SEMI  reduce using rule 42 (DecList)


State 45

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 46

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 47

   23 FunDec: ID LP error RP .

    $default  reduce using rule 23 (FunDec)


State 48

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 26 (ParamDec)


State 49

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 50

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 72
    ParamDec         go to state 34


State 51

   20 VarDec: VarDec LB error RB .

    $default  reduce using rule 20 (VarDec)


State 52

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 53

   28 CompSt: LC error RC .

    $default  reduce using rule 28 (CompSt)


State 54

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


State 55

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


State 56

   60 Exp: ID . LP Args RP
   61    | ID . LP RP
   65    | ID .

    LP  shift, and go to state 73

    $default  reduce using rule 65 (Exp)


State 57

   58 Exp: MINUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 74


State 58

   59 Exp: NOT . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 75


State 59

   57 Exp: LP . Exp RP

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 76


State 60

   33 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 77


State 61

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt
   36     | IF . LP Exp RP error ELSE Stmt

    LP  shift, and go to state 78


State 62

   37 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 79


State 63

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 64

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 80


State 65

   29 StmtList: Stmt . StmtList

    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 25
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    $default  reduce using rule 30 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 81
    Stmt      go to state 65
    Exp       go to state 66


State 66

   31 Stmt: Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    SEMI      shift, and go to state 82
    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    LB        shift, and go to state 92


State 67

   41 Def: Specifier error SEMI .

    $default  reduce using rule 41 (Def)


State 68

   47 Dec: VarDec ASSIGNOP . Exp
   48    | VarDec ASSIGNOP . error

    error  shift, and go to state 93
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 94


State 69

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 70

   44 DecList: Dec error . DecList
   45        | Dec error .

    ID  shift, and go to state 35

    $default  reduce using rule 45 (DecList)

    VarDec   go to state 42
    DecList  go to state 95
    Dec      go to state 44


State 71

   43 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    VarDec   go to state 42
    DecList  go to state 96
    Dec      go to state 44


State 72

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 73

   60 Exp: ID LP . Args RP
   61    | ID LP . RP

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    RP     shift, and go to state 97

    Exp   go to state 98
    Args  go to state 99


State 74

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   58    | MINUS Exp .
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    STAR  shift, and go to state 87
    DIV   shift, and go to state 88
    DOT   shift, and go to state 91
    LB    shift, and go to state 92

    $default  reduce using rule 58 (Exp)


State 75

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   59    | NOT Exp .
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    DOT  shift, and go to state 91
    LB   shift, and go to state 92

    $default  reduce using rule 59 (Exp)


State 76

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   57    | LP Exp . RP
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    RP        shift, and go to state 100
    LB        shift, and go to state 92


State 77

   33 Stmt: RETURN Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    SEMI      shift, and go to state 101
    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    LB        shift, and go to state 92


State 78

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt
   36     | IF LP . Exp RP error ELSE Stmt

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 102


State 79

   37 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 103


State 80

   27 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 27 (CompSt)


State 81

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


State 82

   31 Stmt: Exp SEMI .

    $default  reduce using rule 31 (Stmt)


State 83

   49 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 104


State 84

   52 Exp: Exp RELOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 105


State 85

   53 Exp: Exp PLUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 106


State 86

   54 Exp: Exp MINUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 107


State 87

   55 Exp: Exp STAR . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 108


State 88

   56 Exp: Exp DIV . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 109


State 89

   50 Exp: Exp AND . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
